css/style.css
:root {
    --bs-primary: #1C5700;
    --bs-secondary: #FED33A;
    --bs-dark: #002301;


    /*custom colors*/
    --text-color:#2F1C00;
    --hover-light: #bbeea478;
    --hover-neutral: #9ED087;
    --hover-dark: #014804;

    --card-background: #F9FAF8;
    --transparent: #ffffff00;

    /*accordion dummmist fix*/
    --bs-primary-bg-subtle:var(--transparent);

    /*Rundheit von allem*/
    --corner-rounding: 40px;  
}

html {
    /*Change Default Font*/
    font-family: "Lexend", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    
}

body {
    color: var(--text-color);
}


.text-bg-primary {
    color: #fff !important;
    background-color: #1C5700 !important;
  }

/*=========================== Headlines ===========================*/

h1 {
    font-family: "Lexend Giga", sans-serif;
    font-weight: 800;
}

h2 {
    font-family: "Lexend Giga", sans-serif;
    font-weight: 700;
}

h3 {
    font-family: "Lexend Giga", sans-serif;
    font-weight: 700;
}

h4 {
    font-family: "Lexend Giga", sans-serif;
    font-weight: 700;
}

h5 {
    font-family: "Lexend Giga", sans-serif;
    font-weight: 700;
}

p {
    font-size: 1.25em;
    font-weight: 400;
}

/*=========================== img-text-card ===========================*/

.img-text-card {
    border-radius: var(--corner-rounding);
    border-width: 0;
    background-color: var(--card-background);
    padding: 0;
    margin: 0;
}

.img-text-card img{
    object-fit: cover;
    border-radius: var(--corner-rounding) 0 0 var(--corner-rounding);
    width: 100%;
    height: 100%;
    max-height: 40rem;
}

/*corrigiert die Rundungen bei vert. gestapelter karte*/
@media (max-width: 768px) {
    .img-text-card img {
        border-radius: var(--corner-rounding) var(--corner-rounding) 0 0;
    }
}

.img-text-card .card-bild {
    padding: 0;
}

.img-text-card .card-text {
    margin-top: auto;
    margin-bottom: auto;
    padding-top: 2rem;
    padding-bottom: 2rem;
}

/*=========================== accordion ===========================*/


.accordion-item {
    background-color: var(--transparent);
    border-width: 1px;
    border-color: var(--hover-light);

}

#accordionLeistungen {
    background-color: var(--card-background);
    border-radius: var(--corner-rounding);
}

.accordion-item h2{
    margin: 0;
}

.accordion-body {
    padding-top:  0rem;
    padding-bottom:  1rem;
    margin-top:  0;
}


.accord-bild {
    object-fit: cover;
    border-radius: var(--corner-rounding) ;
    width: 100%;
    height: 100%;
    max-height: 14rem;
}

.accordion-header {
    background-color: var(--transparent);
    border-radius: var(--corner-rounding);
    border-color: var(--transparent);
}

.accordion-button {
    background-color: var(--transparent);
    border-radius: var(--corner-rounding);
    border-color: var(--transparent);
    padding-top: 2rem;
    padding-bottom: 2rem;
    font-size: 1.25rem;
    font-weight: 600;
    color: var(--text-color);

}

.accordion-button:hover {
    background-color: var(--hover-light);
    border-color: var(--transparent);

}

.accordion-button:not(.collapsed){
    
    box-shadow: none;
    color: var(--text-color);
}

/*=========================== navbar ===========================*/
#header {
    /*wirkt als platzhalter! muss selbe höhe haben wie navbar*/
    min-height: 80px !important;
}

.navbar {
    min-height: 40px !important;
    padding-top: 1rem;
    padding-bottom: 1rem;
    margin-top: .75rem;
    background-color: rgba(255, 255, 255, 0.89) !important;
    backdrop-filter: blur(8px) saturate(120%) contrast(120%);
    box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.05);
    border-radius: var(--corner-rounding);

    max-width: 1400px;

    left: 1rem;
    right: 1rem;
}

@media (max-width: 768px) {
    .navbar-brand {
        padding-left:2rem;
    }
}

.navbar-nav > li{
    text-align: center;
    overflow: hidden; 
    text-overflow: ellipsis;
    white-space: nowrap;
    padding-left: 1.2rem;
  }


.navbar-toggler {
    border: none;
    padding-right: 2rem;
}


.nav-link {
    border-radius: var(--corner-rounding);
    color: var(--text-color);
    font-weight: 400;
    font-size: 1.15rem;

  }
  
.nav-link:hover {
    background-color: var(--hover-light);
    transition: background-color 0.4s ease-out;
  }

.active {
    font-weight: 600;
}

/*=========================== Buttons ===========================*/
.btn {
    border-radius: var(--corner-rounding);

}

.btn-primary, .btn-primary:active, .btn-primary:visited {
    font-weight: 600;
    padding-left: 1.5rem;
    padding-right: 1.5rem;
    padding-top: 1rem;
    padding-bottom: 1rem;
    background-color: var(--bs-primary) !important;
    border-color: var(--transparent) !important;
}

.btn-primary:hover {
    background-color: var(--hover-dark) !important;
}

.btn-secondary, .btn-secondary:active, .btn-secondary:visited {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
    padding-top: .5rem;
    padding-bottom: .5rem;
    background-color: var(--hover-light) !important;
    border-color: var(--transparent) !important;
    color: var(--bs-primary);
}

.btn-secondary:hover {
    background-color: var(--hover-neutral) !important;
    color: var(--bs-primary);
}

.btn-link, .btn-link:active, .btn-link:visited {

    background-color: var(--transparent) !important;
    border-color: var(--transparent) !important;
    color: var(--bs-primary);

}

.btn-link:hover {
    background-color: var(--hover-light) !important;
    color: var(--bs-primary);
}


/*=========================== Bilder Kachel Komponente ===========================*/
.bilder-kachel img {
    object-fit: cover;
    border-radius: var(--corner-rounding);
    max-height: 30vh;
    min-height: 20rem;
    width: 100%;
    height: 100%;
}

@media (max-width: 576px) {
    .mobile-hidden {
        display: none;
    }
}


/*=========================== Textfeld Komponente ===========================*/
.textblock {
    border-radius: var(--corner-rounding);
    background-color: var(--card-background);

    padding: 4rem 2rem;;
}


/*=========================== Hero ===========================*/

.hero-img {
    max-height: 500px;
    z-index: -1;
    
}

@media (max-width: 768px) {
    .hero {
        padding-top: 5rem;
        height: 35rem;

    }
    .hero-img {
        position: relative;
        height: 25rem;
        left: 20%;
        top:-20%;
        z-index: -1;
        overflow: hidden;
    }
}


/*=========================== contact ===========================*/

#kontakt {
    scroll-margin-top: 120px;
  }

.kontakt-bild{
    object-fit: cover;
    border-radius: var(--corner-rounding);

    width: 100%;
    height: 100%;
    margin-bottom: 2rem;
}

.card-design {
    background-color: var(--card-background);
    border-radius: var(--corner-rounding);
    padding: 2rem;
}

@media (max-width: 992px) {
    .kontakt-bild{
        max-height: 18rem;
    }
}

.successBtn {
    transition: all .3s;
    color: var(--White) !important;
    background-color: var(--Success) !important;
    border-color: var(--Success) !important;
    pointer-events: none;
  }
  
  .successBtn:hover {
    color: var(--White) !important;
    background-color: var(--Success) !important;
    border-color: var(--Success) !important;
    pointer-events: none;
  }

/*=========================== imprint ===========================*/

#datenschutz {
    scroll-margin-top: 120px;
  }

/*=========================== footer ===========================*/

  /* #footer{
    background-color: var(--card-background);
    border-radius: var(--corner-rounding) var(--corner-rounding) 0 0;
    margin-top: 2rem;

  } */

.logo-footer {
    padding-top: 1rem;
  }

.list-group-item {
    background-color: var(--transparent);
    border: none;
  } 

.links-footer {
    text-align: end;
}

.footer-link {
    margin-left: auto;  
}

  @media (max-width: 576px) {
    .links-footer {
        text-align: center;
    }

    .logo-footer {
        display: block;
        margin-left: auto;
        margin-right: auto;
      }
}

  /*=========================== impressum ===========================*/

  #impressum {
    max-width: 40rem;
    padding-top: 2rem;
    padding-bottom: 5rem;
  }

  #impressum li {
    font-size: 1.25em;
  }

  #impressum > div > h1 {
    padding-top: 7rem;
  }

  #impressum > h2 {
    padding-top: 3rem;
  }

  #impressum > h3 {
    padding-top: 1.75rem;
  }

